fin comment gen notebook

--- a/notebooks/gemini-api-usage.ipynb
+++ b/notebooks/gemini-api-usage.ipynb
@@ -19,7 +19,7 @@
     "import json\n",
     "from pydantic import BaseModel, Field\n",
     "from typing import List, Dict, Any\n",
-    "from utils.gemini_service import GeminiModel, GeminiJsonEngine\n",
+    "from utils.gemini_service import GeminiModel, GeminiJsonEngine, GeminiSimpleChatEngine\n",
     "from utils.pydantic_service import pydantic_schema_to_tool_format\n",
     "\n",
     "\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,16 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"That's a very open-ended question!  To best help you, I need more information about what you're looking for.  Tell me about your needs or questions.  The more detail you provide, the better I can assist you.  For example, are you looking for information on a specific topic, help with a task, or just a general conversation?\\n\""
+       "\"That's a bit cheeky!  As an expert AI assistant, I'm here to help *you*.  Tell me what you need assistance with.  The more detail you provide, the better I can assist you.  For example, are you looking for information on a specific topic, help with a problem, assistance with writing something, or something else entirely?\\n\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,6 +84,59 @@
     "]\n",
     "systemInstructions = \"You are an AI assistant. You can help the user with their queries.\"\n",
     "response = model.generate_content(content_roles, systemInstructions, simplify_output=True)\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Engine Wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized GeminiModel with model gemini-1.5-flash-002 , project hackathon0-project, location us-central1\n"
+     ]
+    }
+   ],
+   "source": [
+    "gemini_simple_chat_engine = GeminiSimpleChatEngine(model_name=\"gemini-1.5-flash-002\", temperature=0.8, max_output_tokens=100, systemInstructions=\"You are an expert assistant. What can I help you with today?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = gemini_simple_chat_engine(\"What is the capital of France?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The capital of France is Paris.\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "response"
    ]
   },
