--- a/notebooks/fin-comment-gen.ipynb
+++ b/notebooks/fin-comment-gen.ipynb
@@ -41,6 +41,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Save the sample_summarized_pnl_commentaries to a file\n",
+    "# with open(\"../sample_data/sample_summarized_pnl_commentaries.json\", \"w\") as f:\n",
+    "#     json.dump(sample_summarized_pnl_commentaries, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -431,6 +442,127 @@
     "    systemInstructions=None\n",
     ")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BUIS</th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>NET</th>\n",
+       "      <th>FACTOR</th>\n",
+       "      <th>PROF_LOSS</th>\n",
+       "      <th>CUR</th>\n",
+       "      <th>PF</th>\n",
+       "      <th>DSK</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CEEMAEA</td>\n",
+       "      <td>2023-06-01</td>\n",
+       "      <td>1359240</td>\n",
+       "      <td>BondBasis</td>\n",
+       "      <td>LOSS</td>\n",
+       "      <td>INR</td>\n",
+       "      <td>American London CEEMAEA Portfolio</td>\n",
+       "      <td>LATAM/NYC DSK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CEEMAEA</td>\n",
+       "      <td>2023-06-01</td>\n",
+       "      <td>1697695</td>\n",
+       "      <td>FXDelta</td>\n",
+       "      <td>PROFFIT</td>\n",
+       "      <td>GBP</td>\n",
+       "      <td>European CEEMAEA Portfolio</td>\n",
+       "      <td>US/LDN DSK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LATAM</td>\n",
+       "      <td>2023-06-01</td>\n",
+       "      <td>125891</td>\n",
+       "      <td>BondBasis</td>\n",
+       "      <td>LOSS</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>LATAM Emerging Portfolio</td>\n",
+       "      <td>LATAM/NYC DSK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CEEMAEA</td>\n",
+       "      <td>2023-06-02</td>\n",
+       "      <td>80205</td>\n",
+       "      <td>BondBasis</td>\n",
+       "      <td>LOSS</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>American London CEEMAEA Portfolio</td>\n",
+       "      <td>US/LDN DSK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LATAM</td>\n",
+       "      <td>2023-06-02</td>\n",
+       "      <td>1287150</td>\n",
+       "      <td>IRDelta</td>\n",
+       "      <td>LOSS</td>\n",
+       "      <td>GBP</td>\n",
+       "      <td>American London CEEMAEA Portfolio</td>\n",
+       "      <td>US/LDN DSK</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      BUIS        DATE      NET     FACTOR PROF_LOSS  CUR  \\\n",
+       "0  CEEMAEA  2023-06-01  1359240  BondBasis      LOSS  INR   \n",
+       "1  CEEMAEA  2023-06-01  1697695    FXDelta   PROFFIT  GBP   \n",
+       "2    LATAM  2023-06-01   125891  BondBasis      LOSS  EUR   \n",
+       "3  CEEMAEA  2023-06-02    80205  BondBasis      LOSS  EUR   \n",
+       "4    LATAM  2023-06-02  1287150    IRDelta      LOSS  GBP   \n",
+       "\n",
+       "                                  PF            DSK  \n",
+       "0  American London CEEMAEA Portfolio  LATAM/NYC DSK  \n",
+       "1         European CEEMAEA Portfolio     US/LDN DSK  \n",
+       "2           LATAM Emerging Portfolio  LATAM/NYC DSK  \n",
+       "3  American London CEEMAEA Portfolio     US/LDN DSK  \n",
+       "4  American London CEEMAEA Portfolio     US/LDN DSK  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(rule_based_title_comment_data).head()"
    ]
   },
   {
