agent v2 controller added

--- a/notebooks/fin-agent.ipynb
+++ b/notebooks/fin-agent.ipynb
@@ -916,6 +916,7 @@
     "        'refine_old_summaries':[],\n",
     "        'subj_query_generation':[],\n",
     "        'stat_query_generation':[],\n",
+    "        'register_data':[],\n",
     "        'sql_script_generation':[],\n",
     "        'sql_result':[],\n",
     "        'bucket_query_generation':[],\n",
